# sloc

./: .sosrc  Main.hs  README.md  package.yaml  sloc.cabal  sloc.cabal.hs  stack.yaml
src/Streaming/: Filesystem.hs
